# text-builder-dev

./: BENCHMARK_RESULTS  build.bash  cabal.project  stack.yaml  text-builder-dev.cabal
.github/workflows/: format-and-test.yaml  integrate.yaml  release.yaml
bench/: Main.hs
benchmark-char/: Main.hs
benchmark-text/: Main.hs
test/: Main.hs
test/Main/: StrictTextBuilder.hs  TastyExtras.hs
test/TextBuilderDev/: TastyExtras.hs
