cabal-version: 3.0
name: text-builder-dev
version: 0.3.10
category: Text, Builders
synopsis: Edge of developments for "text-builder"
description:
  This is a development version of \"text-builder\".
  All experimentation and feature development happens here.
  The API can change drastically.
  For a more stable API use \"text-builder\",
  which is now just a wrapper over this package.

homepage: https://github.com/nikita-volkov/text-builder-dev
bug-reports: https://github.com/nikita-volkov/text-builder-dev/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/text-builder-dev

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules: TextBuilderDev
  other-modules:
    TextBuilderDev.Allocator
    TextBuilderDev.Allocator.ArrayWriter
    TextBuilderDev.Prelude
    TextBuilderDev.Unicode
    TextBuilderDev.Utf16View
    TextBuilderDev.Utf8View

  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    deferred-folds >=0.9.10.1 && <0.10,
    isomorphism-class >=0.3 && <0.4,
    lawful-conversions >=0.1.4 && <0.2,
    quickcheck-instances >=0.3.28 && <0.4,
    split >=0.2.3.4 && <0.3,
    text >=1.0 && <3,
    time >=1.12 && <2,
    transformers >=0.5 && <0.7,

test-suite test
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: TextBuilderDev.TastyExtras
  build-depends:
    base-compat >=0.13,
    lawful-conversions >=0.1.4 && <0.2,
    quickcheck-classes >=0.6.5 && <0.7,
    quickcheck-instances >=0.3.28 && <0.4,
    rerebase <2,
    tasty >=1.2.3 && <2,
    tasty-hunit >=0.10.0.2 && <0.11,
    tasty-quickcheck >=0.10.1 && <0.12,
    text-builder-dev,

benchmark bench
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -funbox-strict-fields

  main-is: Main.hs
  build-depends:
    base >=4.11 && <5,
    tasty-bench ^>=0.4.1,
    text >=2.1.2 && <3,
    text-builder-dev,
