cabal-version: 3.0
name: text-builder-dev
version: 0.3.10
category: Text, Builders
synopsis: Edge of developments for "text-builder"
description:
  This is a development version of \"text-builder\".
  All experimentation and feature development happens here.
  The API can change drastically.
  For a more stable API use \"text-builder\",
  which is now just a wrapper over this package.

homepage: https://github.com/nikita-volkov/text-builder-dev
bug-reports: https://github.com/nikita-volkov/text-builder-dev/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/text-builder-dev

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules: TextBuilderDev
  other-modules:
    TextBuilderDev.Base
    TextBuilderDev.Domains.Data
    TextBuilderDev.Domains.Digits
    TextBuilderDev.Domains.Other
    TextBuilderDev.Domains.Padding
    TextBuilderDev.Domains.StrictBuilder
    TextBuilderDev.Domains.StrictTextBuilder
    TextBuilderDev.Domains.Time
    TextBuilderDev.Domains.Unicode
    TextBuilderDev.Domains.Unicode.Utf16View
    TextBuilderDev.Domains.Unicode.Utf16View.Unicode
    TextBuilderDev.Domains.Unicode.Utf8View
    TextBuilderDev.IsTextBuilder
    TextBuilderDev.Prelude

  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    quickcheck-instances >=0.3.28 && <0.4,
    split >=0.2.3.4 && <0.3,
    text >=1.2 && <3,
    time >=1.12 && <2,
    transformers >=0.5 && <0.7,

test-suite test
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Main.StrictTextBuilder
    Main.TastyExtras

  build-depends:
    base >=4.11 && <5,
    base-compat >=0.13,
    bytestring >=0.10 && <0.13,
    quickcheck-classes >=0.6.5 && <0.7,
    quickcheck-instances >=0.3.28 && <0.4,
    tasty >=1.2.3 && <2,
    tasty-hunit >=0.10.0.2 && <0.11,
    tasty-quickcheck >=0.10.1 && <0.12,
    text >=1.2 && <3,
    text-builder-dev,
    time >=1.12 && <2,

benchmark bench
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -with-rtsopts=-A32m
    -with-rtsopts=-T
    -fproc-alignment=64

  main-is: Main.hs
  build-depends:
    base >=4.11 && <5,
    tasty-bench ^>=0.4.1,
    text >=2.1.2 && <3,
    text-builder-dev,
    text-builder-linear ^>=0.1.3,
